# article_check

./: CMakeLists.txt  case.c  case.h  exact_fading.c  exact_fading.h  gas_two.c  gas_two.h  gnuploting.c  main.c  residuals.c  residuals.h
